--- a/src/app/pages/bes2/activities/bes2-activities.component.scss
+++ b/src/app/pages/bes2/activities/bes2-activities.component.scss
@@ -48,7 +48,7 @@ $inner-container-height: 160px;
 
 @media #{sizes.$breakpoint-small} {
   $overlay-margin: 32px;
-  $inner-container-height: 172px;
+  $inner-container-height: 216px;
 
   .overlay-left {
     z-index: 1;
